Adjusts Cottontail DB adaption so that it can support newest driver version.